# PEP 518: https://www.python.org/dev/peps/pep-0518/

[tool.poetry]
name = "ttls"
version = "1.9.0.pre1"
description = "Twinkly Twinkly Little Star"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD-2-Clause"
classifiers = ["License :: OSI Approved :: BSD License"]
readme = "README.md"
repository = "https://github.com/jschlyter/ttls"

[tool.poetry.scripts]
ttls = "ttls.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
aiounittest = "^1.4.2"
ruff = "^0.6.9"
pytest-ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
