# PEP 518: https://www.python.org/dev/peps/pep-0518/

[project]
name = "ttls"
dynamic = ["version"]
description = "Twinkly Twinkly Little Star"
authors = [
    { name = "Jakob Schlyter", email = "jakob@schlyter.se" }
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp>=3.11.14",
]

[project.urls]
repository = "https://github.com/jschlyter/ttls"

[project.scripts]
ttls = "ttls.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "aiounittest>=1.5.0",
    "pytest>=8.3.5",
    "pytest-ruff>=0.4.1",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
